--- a/src/pages/posts/[pubYear]/[pubMonth]/[pubDay]/[slug].astro
+++ b/src/pages/posts/[pubYear]/[pubMonth]/[pubDay]/[slug].astro
@@ -1,5 +1,6 @@
 ---
 import AppLayout from '@layouts/app.astro'
+import MainPost from '@components/MainPost.astro'
 import { getPosts } from '@utils/posts'
 
 export const getStaticPaths = () => (
@@ -17,7 +18,6 @@ export const getStaticPaths = () => (
 const { post } = Astro.props
 ---
 <AppLayout title={post.title}>
-  <h2>{post.title}</h2>
-  <Fragment set:html={post.compiledContent()} />
+  <MainPost post={post} fullText={true} />
 </AppLayout>
 
