--- a/src/components/MainPost.astro
+++ b/src/components/MainPost.astro
@@ -68,6 +68,7 @@ const postImg = getMainImageAttributes(post)
     max-width: 100%;
     height: auto;
     flex-basis: 7.5rem;
+    box-sizing: content-box;
   }
 
   .article-frontmatter {
