--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -24,6 +24,11 @@ import SvgIcon from '@components/SvgIcon.astro'
     background: transparent;
     width: 14rem;
   }
+
+  .social-button:hover, .social-button:focus {
+    border-color: hsl(44, 14%, 40%);
+    color: hsl(13deg 50% 25%);
+  }
 </style>
 
 <h2 class="social-header">Підпишись на нас</h2>
