--- a/src/pages/podcasts/[...page].astro
+++ b/src/pages/podcasts/[...page].astro
@@ -1,5 +1,6 @@
 ---
 import AppLayout from '@layouts/app.astro'
+import Pages from '@components/Pages.astro'
 import { getPosts } from '@utils/posts'
 
 export const getStaticPaths = ({ paginate }) => (
@@ -8,11 +9,39 @@ export const getStaticPaths = ({ paginate }) => (
 
 const { page } = Astro.props
 ---
+<style>
+  .podcasts-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    font-size: 1.8rem;
+  }
+  .post-list {
+    font-size: 1rem;
+    list-style: none;
+  }
+
+  .post-list-item {
+    border-bottom: 1px solid hsl(42deg 28% 84%);
+    line-height: 1.6;
+    padding: 0.25rem 0;
+  }
+</style>
+
 <AppLayout>
-  <h1>Подкасти</h1>
-  <h2>Page {page.currentPage}</h2>
-  <ul>
-    <!--List the array of astronaut info-->
-    {page.data.map((post) => <li>{post.frontmatter.title}</li>)}
+  <h1 class="podcasts-title">
+    Подкасти - сторінка {page.currentPage}
+  </h1>
+  <ul class="post-list">
+    {page.data.map((post) => (
+      <li class="post-list-item">
+        [{post.frontmatter.formatedDate}]
+        <a href={post.url}>
+          {post.frontmatter.title}
+        </a>
+      </li>
+    ))}
   </ul>
+  <Pages page={page} />
 </AppLayout>
