--- a/src/pages/archives/[...page].astro
+++ b/src/pages/archives/[...page].astro
@@ -28,7 +28,7 @@ const bottomPosts = page.data.slice(TOP_POSTS_SIZE)
 
 <AppLayout title="Архіви">
   <h1 class="archive-title">
-    Архіви - сторінка #{page.currentPage}
+    Архіви - #{page.currentPage} сторінка
   </h1>
   <TopPosts posts={topPosts} />
   <BottomPosts posts={bottomPosts} />
