--- a/src/components/TopPosts.astro
+++ b/src/components/TopPosts.astro
@@ -34,6 +34,12 @@ const { posts, class: className } = Astro.props
       flex-basis: calc(100% - 1rem);
     }
   }
+
+  @media screen and (max-width: 600px) {
+    .sidebar {
+      display: none;
+    }
+  }
 </style>
 
 <div class="main-article-block">
