--- a/src/pages/podcasts/[...page].astro
+++ b/src/pages/podcasts/[...page].astro
@@ -31,7 +31,7 @@ const { page } = Astro.props
 
 <AppLayout title="Подкасти">
   <h1 class="podcasts-title">
-    Подкасти - сторінка #{page.currentPage}
+    Подкасти - #{page.currentPage} сторінка
   </h1>
   <ul class="post-list">
     {page.data.map((post) => (
